<resources>
    <string name="app_name">TICO</string>

    <!-- Nombres de los Fragmentos del ClienteOComprador -->
    <string name="tag_user_fragment_busqueda">usr_Busqueda</string>
    <string name="tag_user_fragment_carrito_compras">usr_Carrito</string>
    <string name="tag_user_fragment_facturas_anteriores">usr_Facturas</string>
    <string name="tag_user_fragment_descripcion_facturas_anteriores">usr_Facturas</string>
    <string name="tag_user_fragment_perfil">usr_Perfil</string>
    <string name="tag_user_fragment_descripcion_producto">usr_Descripcion</string>
    <string name="tag_user_fragment_lista_productos">usr_Productos</string>
    <string name="tag_user_fragment_login">usr_login</string>
    <string name="tag_user_fragment_sucursal">usr_sucursals</string>
    <string name="tag_user_fragment_registrar">usr_sucursals</string>


    <string name="tag_admin_fragment_perfil">adm_perfil</string>
    <string name="tag_admin_fragment_registrar">adm_registrar</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_user_busqueda_fragment">Hola desde el fragmento de busqueda</string>
    <string name="nombre_producto">Nombre Producto</string>
    <string name="precio_producto">Precio Producto</string>
    <string name="imagenproducto">imagenProducto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Intent y bundle Extras -->
    <string name="intent_producto">intent_producto</string>
    <string name="intent_factura">intent_factura</string>
    <string name="intent_perfil_cliente">intent_perfil_cliente</string>
    <string name="intent_perfil_usuario">intent_perfil_usuario</string>



    <string name="id_laboral">Id Laboral:</string>
    <string name="confirmar_cambios">Confirmar Cambios</string>
    <string name="apellido">Apellido:</string>
    <string name="cedula">Cedula:</string>
    <string name="puesto">Puesto:</string>
    <string name="nombre">Nombre:</string>
    <string name="funciones">Funciones:</string>
    <string name="todo">todo</string>

    <string-array name="provincias_names">
        <item>Alajuela</item>
        <item>Cartago</item>
        <item>Heredia</item>
        <item>Guanacaste</item>
        <item>San Jose</item>
        <item>Limon</item>
        <item>Puntarenas</item>
    </string-array>

</resources>